Bug 343102: Thunderbird cannot forward messages correctly in the inline format when the message contains attachments encoded in quoted-printable format, patch by Tom Bohler <Tom.Bohler@cie.etat.lu>, r=bienvenu, sr=mscott